--- a/client/package.json
+++ b/client/package.json
@@ -6,15 +6,15 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.1",
-    "axios": "^1.3.3",
+    "axios": "^1.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.3",
-    "react-router-dom": "^6.4.3",
-    "react-scripts": "4.0.3",
-    "redux": "^4.0.5",
+    "react-redux": "^7.2.9",
+    "react-router-dom": "^6.8.2",
+    "react-scripts": "^4.0.3",
+    "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.3.0",
+    "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
